--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,6 @@ version_minecraft = 1.10.2
 version_forge = 12.18.3.2239
 version_forge_long = 1.10.2-12.18.3.2239
 version_mappings = snapshot_20161111
+
+# compatlayer
+compat_version = 1.10-0.2.5
