--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,1 @@
-org.gradle.jvmargs=-Xmx3G
-
-# SimpleCore
-version_mod = 1.4.2
-
-# Core
-version_java = 1.8
-version_minecraft = 1.10.2
-version_forge = 12.18.3.2239
-version_forge_long = 1.10.2-12.18.3.2239
-version_mappings = snapshot_20161111
-
-# compatlayer
-compat_version = 1.10-0.2.5
+gradle-1.10.2.properties
